# test_actions

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: fetch.yml  fetch_all.yml  fetch_one.yml
plugins/reports_map/: package-lock.json  package.json
plugins/reports_map/src/: Playback.js  block.json  edit.js  front.js  helpers.js  save.js  style.scss
plugins/reports_map/src/heatmap/: ReportHeatmap.js  ReportMap.js  ReportScale.js  report-areas.json  (+2 more)
plugins/reports_template/: package-lock.json  package.json
plugins/reports_template/src/: block.json  edit.js
src/: index.js
src/analyse/counts/: area_counts.py  category_counts.py  counts.py  create_badge.py  create_button.py  fix_dest.py  gender_counts.py  helpers.py  name_counts.py  sent_count_first.py  sent_counts.py  sent_statistics.py  sort_by_date.py  split_dest.py  statistics_by_date.py  year_counts.py
src/analyse/natural-language/: label-reports.py
src/correct/: correct_areas.js  correct_destinations.js  correct_names.js
src/correct/data/: areas.json  fetched_names.json
src/correct/failed_parses/: areas.json  destinations.json  names.json
src/correct/manual_replace/: areas.json  destinations.json  names.json  new_unknown_destinations.json
src/data/: README.md  coroners-society.csv  monthly_statistics.toml  reports-analysed.csv  reports-corrected.csv  reports-corrected_.csv  reports.csv  reports_diff.csv  statistics.toml
src/fetch/: diff.js  fetch_report.js  helpers.js
src/parse/: parse_report.js  parse_summary.js
src/write/: index.js
(+27 files in other folders)
